# Bluetooth-win32

./: .gitignore  CMakeLists.txt  README.md
authenticate_incoming_bt_device/: CMakeLists.txt  main.cpp
enumerate_bt_devices/: CMakeLists.txt  main.cpp
enumerate_bt_radio_info/: CMakeLists.txt  main.cpp
make_bt_radio_discoverable/: CMakeLists.txt  main.cpp
select_bt_device_dialog/: CMakeLists.txt  main.cpp
